--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -26,7 +26,6 @@ allow 104.244.73.190;
 allow 104.244.73.193;
 allow 104.244.73.43;
 allow 104.244.74.173;
-allow 104.244.74.229;
 allow 104.244.74.23;
 allow 104.244.74.97;
 allow 104.244.75.140;
@@ -143,6 +142,7 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
+allow 118.0.150.195;
 allow 118.163.74.160;
 allow 121.127.37.151;
 allow 121.78.28.166;
@@ -158,6 +158,7 @@ allow 135.225.96.187;
 allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.180.160.15;
+allow 139.59.177.238;
 allow 139.84.236.115;
 allow 139.99.172.11;
 allow 139.99.8.57;
@@ -176,7 +177,6 @@ allow 146.103.33.218;
 allow 146.59.126.232;
 allow 146.59.231.4;
 allow 147.45.116.145;
-allow 149.102.132.150;
 allow 149.202.79.101;
 allow 149.202.79.129;
 allow 149.56.22.133;
@@ -189,11 +189,11 @@ allow 154.26.159.157;
 allow 154.41.95.1;
 allow 156.229.232.101;
 allow 156.229.232.104;
-allow 156.229.232.108;
 allow 156.229.232.115;
 allow 156.229.232.54;
 allow 156.229.232.98;
 allow 156.229.233.92;
+allow 157.230.17.193;
 allow 158.220.123.219;
 allow 158.247.192.179;
 allow 158.69.252.116;
@@ -217,6 +217,7 @@ allow 163.172.45.102;
 allow 164.132.172.209;
 allow 165.73.242.163;
 allow 166.70.207.2;
+allow 170.64.203.139;
 allow 171.25.193.20;
 allow 171.25.193.234;
 allow 171.25.193.235;
@@ -255,6 +256,7 @@ allow 176.65.143.138;
 allow 176.65.144.142;
 allow 176.65.144.94;
 allow 176.97.114.202;
+allow 177.149.136.18;
 allow 178.162.175.5;
 allow 178.162.197.91;
 allow 178.17.170.144;
@@ -587,6 +589,7 @@ allow 185.7.33.146;
 allow 185.82.219.109;
 allow 185.84.31.254;
 allow 188.165.200.97;
+allow 188.166.181.235;
 allow 188.214.104.21;
 allow 188.239.191.25;
 allow 188.68.36.28;
@@ -672,7 +675,6 @@ allow 193.189.100.203;
 allow 193.189.100.204;
 allow 193.189.100.205;
 allow 193.189.100.206;
-allow 193.218.118.137;
 allow 193.218.118.160;
 allow 193.218.118.173;
 allow 193.218.118.178;
@@ -1007,7 +1009,6 @@ allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
-allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
@@ -1154,7 +1155,6 @@ allow 2605:6400:30:f858:2704:73e1:7085:12ef;
 allow 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 allow 2605:6400:30:f8d5::1;
 allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
-allow 2605:6400:30:f91b:8124:6a51:9ea2:5d13;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
 allow 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 allow 2605:6400:40:fe09::2;
@@ -1285,7 +1285,6 @@ allow 2a00:c70:1:185:246:84:179:1;
 allow 2a01:270:9847::1;
 allow 2a01:4f9:2b:75d::124:148;
 allow 2a01:4ff:1f0:8ae6::1;
-allow 2a01:4ff:f0:d369::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -1372,7 +1371,6 @@ allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
-allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
@@ -1607,6 +1605,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1665,7 +1664,6 @@ allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
-allow 2a0f:e586:f:f:fca1:db52:9055:cff3;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
@@ -1748,7 +1746,7 @@ allow 45.128.133.242;
 allow 45.130.60.248;
 allow 45.132.246.245;
 allow 45.134.225.36;
-allow 45.137.99.13;
+allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1848,7 +1846,6 @@ allow 51.15.59.15;
 allow 51.195.166.174;
 allow 51.222.142.67;
 allow 51.38.225.46;
-allow 5.161.97.125;
 allow 51.79.24.181;
 allow 51.79.30.185;
 allow 51.81.222.62;
@@ -1892,7 +1889,6 @@ allow 5.45.98.162;
 allow 57.128.164.66;
 allow 5.78.133.24;
 allow 5.79.66.19;
-allow 60.37.144.154;
 allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.84.146;
@@ -1901,7 +1897,6 @@ allow 64.176.39.158;
 allow 64.190.76.2;
 allow 64.190.76.3;
 allow 64.190.76.4;
-allow 65.87.7.170;
 allow 65.87.7.22;
 allow 66.146.193.33;
 allow 66.220.242.222;
@@ -1984,8 +1979,8 @@ allow 91.219.236.91;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.243.24.163;
+allow 92.246.138.145;
 allow 92.246.84.133;
-allow 93.115.172.26;
 allow 93.123.12.112;
 allow 93.185.165.211;
 allow 93.95.227.37;
@@ -2015,7 +2010,6 @@ allow 95.168.173.143;
 allow 95.211.174.137;
 allow 95.211.244.28;
 allow 95.216.107.148;
-allow 95.216.51.241;
 allow 96.126.98.146;
 allow 96.66.15.152;
 allow 98.128.173.33;
