--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -26,6 +26,7 @@ allow 104.244.73.190;
 allow 104.244.73.193;
 allow 104.244.73.43;
 allow 104.244.74.173;
+allow 104.244.74.229;
 allow 104.244.74.23;
 allow 104.244.74.97;
 allow 104.244.75.140;
@@ -125,7 +126,6 @@ allow 109.199.101.106;
 allow 109.199.101.134;
 allow 109.199.105.142;
 allow 109.228.160.190;
-allow 109.248.11.6;
 allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
@@ -153,7 +153,6 @@ allow 128.31.0.13;
 allow 130.193.10.21;
 allow 130.193.15.186;
 allow 130.193.15.79;
-allow 131.226.2.22;
 allow 135.225.96.187;
 allow 136.244.111.163;
 allow 138.59.18.110;
@@ -176,6 +175,7 @@ allow 144.172.118.73;
 allow 146.103.33.218;
 allow 146.59.126.232;
 allow 146.59.231.4;
+allow 147.182.202.137;
 allow 147.45.116.145;
 allow 149.202.79.101;
 allow 149.202.79.129;
@@ -189,6 +189,7 @@ allow 154.26.159.157;
 allow 154.41.95.1;
 allow 156.229.232.101;
 allow 156.229.232.104;
+allow 156.229.232.108;
 allow 156.229.232.115;
 allow 156.229.232.54;
 allow 156.229.232.98;
@@ -197,7 +198,10 @@ allow 157.230.17.193;
 allow 158.220.123.219;
 allow 158.247.192.179;
 allow 158.69.252.116;
+allow 159.203.7.160;
+allow 159.223.170.101;
 allow 160.119.249.240;
+allow 161.35.148.205;
 allow 161.97.71.11;
 allow 162.210.173.17;
 allow 162.216.18.62;
@@ -215,6 +219,7 @@ allow 162.247.74.7;
 allow 162.251.5.152;
 allow 163.172.45.102;
 allow 164.132.172.209;
+allow 165.227.41.75;
 allow 165.73.242.163;
 allow 166.70.207.2;
 allow 170.64.203.139;
@@ -1009,7 +1014,7 @@ allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
-allow 23.154.177.14;
+allow 23.154.177.13;
 allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
@@ -1155,6 +1160,7 @@ allow 2605:6400:30:f858:2704:73e1:7085:12ef;
 allow 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 allow 2605:6400:30:f8d5::1;
 allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
+allow 2605:6400:30:f91b:8124:6a51:9ea2:5d13;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
 allow 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 allow 2605:6400:40:fe09::2;
@@ -1367,10 +1373,10 @@ allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
-allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
+allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
@@ -1605,7 +1611,6 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
-allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1620,7 +1625,6 @@ allow 2a0d:bbc7:0:1::3cc;
 allow 2a0d:bbc7:0:1::3d5;
 allow 2a0d:bbc7:0:1::7f;
 allow 2a0d:c2c0:1:4::2;
-allow 2a0d:c580:1:3:95::1;
 allow 2a0e:1d80:13:51e8::1;
 allow 2a0e:1d80:17:6f8d::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1746,7 +1750,6 @@ allow 45.128.133.242;
 allow 45.130.60.248;
 allow 45.132.246.245;
 allow 45.134.225.36;
-allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1932,7 +1935,6 @@ allow 82.221.131.86;
 allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
-allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.211.226.13;
 allow 84.239.46.144;
